feat: Java 8 compat, maven wrapper, Response/Request deser fix, HttpFile, expanded headers and content types
Agent-Logs-Url: https://github.com/pedrozc90/java-http/sessions/9436f5fe-33ad-43c9-865c-d0f121d56107

Co-authored-by: pedrozc90 <5891960+pedrozc90@users.noreply.github.com>