@@ -83,7 +83,7 @@ public class FileUtils {
      * Falls back to Files.probeContentType if available.
      */
     public static String guessContentType(final String filename) {
-        if (filename != null && !filename.isBlank()) {
+        if (filename != null && !filename.trim().isEmpty()) {
             String ext = getExtension(filename);
             if (ext != null) {
                 String byExt = _map.get(ext.toLowerCase(Locale.ROOT));
